crates/biome_js_type_info/tests/snapshots/infer_type_of_mapped_type_with_aliased_keys.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
type Flags = { [K in Keys]: boolean };

```

## Result

```
MappedType {
    type_parameter: Resolved(
        Local TypeId(0),
    ),
    keys: Type(
        Resolved(
            Local TypeId(1),
        ),
    ),
    ty: Resolved(
        Local TypeId(2),
    ),
    readonly_modifier: None,
    optional_modifier: None,
}
```

## Registered types

```
Module TypeId(0) => K

Module TypeId(1) => instanceof unresolved reference "Keys" (scope ID: 0)

Module TypeId(2) => boolean
```
