crates/biome_js_type_info/tests/snapshots/infer_type_of_mapped_type_with_as_clause_is_unknown.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
type Remapped<T> = { [K in keyof T as Uppercase<K>]: T[K] };

```

## Result

```
instanceof unknown<Local TypeId(0)>
```

## Registered types

```
Module TypeId(0) => T
```
