crates/biome_js_type_info/tests/snapshots/infer_type_of_mapped_type_with_never_keys.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
type Empty = { [K in never]: number };

```

## Result

```
MappedType {
    type_parameter: Resolved(
        Local TypeId(0),
    ),
    keys: Type(
        Resolved(
            Local TypeId(1),
        ),
    ),
    ty: Resolved(
        number,
    ),
    readonly_modifier: None,
    optional_modifier: None,
}
```

## Registered types

```
Module TypeId(0) => K

Module TypeId(1) => never
```
