crates/biome_js_type_info/tests/snapshots/infer_type_of_mapped_type_with_primitive_keys.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
type Dictionary = { [K in string]: number };

```

## Result

```
MappedType {
    type_parameter: Resolved(
        Local TypeId(0),
    ),
    keys: Type(
        Resolved(
            string,
        ),
    ),
    ty: Resolved(
        number,
    ),
    readonly_modifier: None,
    optional_modifier: None,
}
```

## Registered types

```
Module TypeId(0) => K
```
