crates/biome_js_type_info/tests/snapshots/infer_type_of_mapped_type_with_typeof_keys.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
type Keys = { [K in keyof typeof object]: K };

```

## Result

```
MappedType {
    type_parameter: Resolved(
        Local TypeId(0),
    ),
    keys: Keyof(
        Resolved(
            Local TypeId(1),
        ),
    ),
    ty: Resolved(
        Local TypeId(2),
    ),
    readonly_modifier: None,
    optional_modifier: None,
}
```

## Registered types

```
Module TypeId(0) => K

Module TypeId(1) => typeof unresolved reference "object" (scope ID: 0)

Module TypeId(2) => instanceof unresolved reference "K" (scope ID: 0)
```
