crates/biome_js_type_info/tests/snapshots/infer_type_of_nested_mapped_types.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
type Nested<T> = { [K in keyof T]: { [P in keyof T[K]]: T[K][P] } };

```

## Result

```
instanceof Local TypeId(8)<Local TypeId(9)>
```

## Registered types

```
Module TypeId(0) => K

Module TypeId(1) => instanceof unresolved reference "T" (scope ID: 0)

Module TypeId(2) => P

Module TypeId(3) => instanceof unresolved reference "K" (scope ID: 0)

Module TypeId(4) => IndexedAccessType {
    object: Resolved(
        Local TypeId(1),
    ),
    index: Resolved(
        Local TypeId(3),
    ),
}

Module TypeId(5) => instanceof unresolved reference "P" (scope ID: 0)

Module TypeId(6) => IndexedAccessType {
    object: Resolved(
        Local TypeId(4),
    ),
    index: Resolved(
        Local TypeId(5),
    ),
}

Module TypeId(7) => MappedType {
    type_parameter: Resolved(
        Local TypeId(2),
    ),
    keys: Keyof(
        Resolved(
            Local TypeId(4),
        ),
    ),
    ty: Resolved(
        Local TypeId(6),
    ),
    readonly_modifier: None,
    optional_modifier: None,
}

Module TypeId(8) => MappedType {
    type_parameter: Resolved(
        Local TypeId(0),
    ),
    keys: Keyof(
        Resolved(
            Local TypeId(1),
        ),
    ),
    ty: Resolved(
        Local TypeId(7),
    ),
    readonly_modifier: None,
    optional_modifier: None,
}

Module TypeId(9) => T
```
